[gd_scene format=3 uid="uid://cqljlwc8jrffj"]

[ext_resource type="Script" uid="uid://bfb11cygpruyi" path="res://interface/screens/main/text_area.gd" id="1_c3mle"]
[ext_resource type="Texture2D" uid="uid://281yk0xge6fj" path="res://icons/send.png" id="2_3aqdj"]

[node name="TextArea" type="HBoxContainer" unique_id=100155648]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3mle")

[node name="TextEdit" type="TextEdit" parent="." unique_id=1380508690]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Send a message..."
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="SendButton" type="Button" parent="." unique_id=45688852]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
icon = ExtResource("2_3aqdj")
expand_icon = true

[connection signal="gui_input" from="TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="pressed" from="SendButton" to="." method="_on_send_button_pressed"]
